Created client view model and view

--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -72,6 +72,10 @@
                 <views:ClientAttractionsView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewmodels:ClientTripDetailsViewModel}">
+                <views:ClientTripDetailsView/>
+            </DataTemplate>
+
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
