--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -18,6 +18,11 @@
         WindowState="Maximized"
         MinWidth="850"
         MinHeight="400">
+    
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.Help" Executed="CommandBinding_Executed"/>
+    </Window.CommandBindings>
+    
     <Grid>
         <Grid.Resources>
             <DataTemplate DataType="{x:Type viewmodels:ClientStayEatViewModel}">
