Created help for login

--- a/TravelApp/DesktopHost/View/LoginView.xaml
+++ b/TravelApp/DesktopHost/View/LoginView.xaml
@@ -7,6 +7,10 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
         xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
+        xmlns:l="clr-namespace:TravelApp"
+        Focusable="True"
+        l:HelpProvider.HelpKey="login"
+        GotFocus="SetHelpKey"
         mc:Ignorable="d"
         Background="White"
         SizeChanged="Window_SizeChanged"
