Started working on information

--- a/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TravelApp.DesktopHost.View"
              mc:Ignorable="d" 
+             xmlns:viewmodel="clr-namespace:TravelApp.DesktopHost.ViewModel"
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewmodel:ClientTripDetailsView}"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
@@ -14,11 +15,11 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="1*" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="4*" />
         </Grid.RowDefinitions>
         <components:ClientNavigationView Grid.Row="0" SelectedIndex="-1"></components:ClientNavigationView>
-
-
+                                   
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -51,5 +52,67 @@
                     Margin="40 0 0 0"/>
 
         </Grid>
+
+        <Grid Grid.Row="2">
+            <Line X1="1" Y1="1" 
+                  X2="1250" Y2="0" 
+                  Stroke="Gray" 
+                  StrokeThickness="0.8"
+                  Margin="100 0 0 0"/>
+        </Grid>
+
+        <Grid Grid.Row="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="500"></ColumnDefinition>
+                <ColumnDefinition Width="500"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"></RowDefinition>
+                    <RowDefinition Height="auto"></RowDefinition>
+                    <RowDefinition Height="auto"></RowDefinition>
+                    <RowDefinition Height="auto"></RowDefinition>
+                    <RowDefinition Height="auto"></RowDefinition>
+                    <RowDefinition Height="auto"></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <TextBlock 
+                    Grid.Row="0"
+                    Text="INFORMATION:"
+                    FontWeight="Bold"
+                    TextAlignment="Left"
+                    FontSize="25"
+                    Foreground="#1E2F97"
+                    Margin="100 50 0 0"/>
+
+                <Grid Grid.Row="1" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"></ColumnDefinition>
+                        <ColumnDefinition Width="auto"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock 
+                        Grid.Column="0"
+                        Text="Departure:"
+                        FontWeight="SemiBold"
+                        TextAlignment="Left"
+                        FontSize="25"
+                        Foreground="Black"
+                        Margin="100 40 0 0"/>
+
+                    <TextBlock 
+                        Grid.Column="1"
+                        Text="{Binding Trip.Departure}"
+                        FontWeight="Medium"
+                        TextAlignment="Left"
+                        FontSize="25"
+                        Foreground="Gray"
+                        Margin="20 40 0 0"/>
+                </Grid>
+
+            </Grid>
+        </Grid>
+        
     </Grid>
 </UserControl>
