--- a/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
@@ -55,7 +55,7 @@
 
         <Grid Grid.Row="2">
             <Line X1="1" Y1="1" 
-                  X2="1250" Y2="0" 
+                  X2="1340" Y2="0" 
                   Stroke="Gray" 
                   StrokeThickness="0.8"
                   Margin="100 0 0 0"/>
@@ -64,6 +64,7 @@
         <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="500"></ColumnDefinition>
+                <ColumnDefinition Width="50"></ColumnDefinition>
                 <ColumnDefinition Width="500"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
@@ -84,7 +85,7 @@
                     TextAlignment="Left"
                     FontSize="25"
                     Foreground="#1E2F97"
-                    Margin="100 50 0 0"/>
+                    Margin="100 80 0 0"/>
 
                 <Grid Grid.Row="1" >
                     <Grid.ColumnDefinitions>
@@ -221,6 +222,14 @@
                         Margin="20 30 0 0"/>
                 </Grid>
 
+            </Grid>
+
+            <Grid Grid.Column="1">
+                <Line X1="0" Y1="0"
+                      X2="0" Y2="500" 
+                      Stroke="Gray" 
+                      StrokeThickness="0.8" 
+                      Margin="20 50 0 0"/>
             </Grid>
         </Grid>
         
