--- a/TravelApp/DesktopHost/View/Client/ClientStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientStayEatView.xaml
@@ -7,6 +7,11 @@
         xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
         xmlns:components="clr-namespace:TravelApp.DesktopHost.View"
         xmlns:local="clr-namespace:TravelApp.DesktopHost.View"
+        xmlns:l="clr-namespace:TravelApp"
+        Focusable="True"
+        l:HelpProvider.HelpKey="stayAndEat"
+        GotFocus="SetHelpKey"
+        Loaded="UserControl_Loaded"
         d:DataContext="{d:DesignInstance Type=viewmodels:ClientStayEatViewModel}"
         mc:Ignorable="d" 
         Background="White"
